Préparation de l’implantation des lignes de commande
Correction du bug de la méthode CombinationCharset mettant les fucking parenthèse dans la fonction et en supprimer le return dans le if qui empêcher la surcharge de la mémoire.

Dans le but de pouvoir faire un pipe avec Pyrit, aircrack-ng et etc la classe charset a été modifié pour pouvoir l'utiliser avec des commande. La classe MainConsole à été supprimer et remplacer par la classe Menu qui regroupe de fonctionnalité de charset et de MainConsole. La classe commande été créer pour implémenter les option de ligne de commande avec la Librairy Plossum.

--- a/Crisis/crisis.csproj
+++ b/Crisis/crisis.csproj
@@ -48,8 +48,9 @@
     <Compile Include="Combination.cs" />
     <Compile Include="Generate.cs" />
     <Compile Include="Help.cs" />
-    <Compile Include="MainConsole.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="Command.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.desktop">
