corretion du MakeFile

--- a/Crisis/Makefile
+++ b/Crisis/Makefile
@@ -9,7 +9,7 @@ top_srcdir=..
 include $(top_srcdir)/config.make
 
 ifeq ($(CONFIG),DEBUG_X86)
-ASSEMBLY_COMPILER_COMMAND = gmcs
+ASSEMBLY_COMPILER_COMMAND = dmcs
 ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -warn:4 -optimize- -debug "-define:DEBUG;"
 ASSEMBLY = bin/Debug/crisis.exe
 ASSEMBLY_MDB = $(ASSEMBLY).mdb
@@ -19,11 +19,13 @@ BUILD_DIR = bin/Debug
 
 CRISIS_EXE_MDB_SOURCE=bin/Debug/crisis.exe.mdb
 CRISIS_EXE_MDB=$(BUILD_DIR)/crisis.exe.mdb
+C5_DLL_SOURCE=../packages/C5.1.0.2.0/lib/net35/C5.dll
+PLOSSUM_COMMANDLINE_DLL_SOURCE=../packages/Plossum.CommandLine.0.3.0.14/lib/net35/Plossum\ CommandLine.dll
 
 endif
 
 ifeq ($(CONFIG),RELEASE_X86)
-ASSEMBLY_COMPILER_COMMAND = gmcs
+ASSEMBLY_COMPILER_COMMAND = dmcs
 ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -warn:4 -optimize+
 ASSEMBLY = bin/Release/crisis.exe
 ASSEMBLY_MDB = 
@@ -32,14 +34,18 @@ PROJECT_REFERENCES =
 BUILD_DIR = bin/Release
 
 CRISIS_EXE_MDB=
+C5_DLL_SOURCE=../packages/C5.1.0.2.0/lib/net35/C5.dll
+PLOSSUM_COMMANDLINE_DLL_SOURCE=../packages/Plossum.CommandLine.0.3.0.14/lib/net35/Plossum\ CommandLine.dll
 
 endif
 
-AL=al2
+AL=al
 SATELLITE_ASSEMBLY_NAME=$(notdir $(basename $(ASSEMBLY))).resources.dll
 
 PROGRAMFILES = \
-	$(CRISIS_EXE_MDB)  
+	$(CRISIS_EXE_MDB) \
+	$(C5_DLL) \
+	$(PLOSSUM_COMMANDLINE_DLL)  
 
 BINARIES = \
 	$(CRISIS)  
@@ -47,6 +53,8 @@ BINARIES = \
 
 RESGEN=resgen2
 
+C5_DLL = $(BUILD_DIR)/C5.dll
+PLOSSUM_COMMANDLINE_DLL = $(BUILD_DIR)/Plossum\ CommandLine.dll
 CRISIS = $(BUILD_DIR)/crisis
 
 FILES = \
@@ -55,8 +63,9 @@ FILES = \
 	Combination.cs \
 	Generate.cs \
 	Help.cs \
-	MainConsole.cs \
-	Program.cs 
+	Program.cs \
+	Menu.cs \
+	Command.cs 
 
 DATA_FILES = 
 
@@ -64,13 +73,16 @@ RESOURCES =
 
 EXTRAS = \
 	app.desktop \
+	packages.config \
 	crisis.in 
 
 REFERENCES =  \
 	System \
 	System.Core
 
-DLL_REFERENCES = 
+DLL_REFERENCES =  \
+	../packages/C5.1.0.2.0/lib/net35/C5.dll \
+	../packages/Plossum.CommandLine.0.3.0.14/lib/net35/Plossum\ CommandLine.dll
 
 CLEANFILES = $(PROGRAMFILES) $(BINARIES) 
 
@@ -82,6 +94,8 @@ include $(top_srcdir)/Makefile.include
 
 
 
+$(eval $(call emit-deploy-target,C5_DLL))
+$(eval $(call emit-deploy-target,PLOSSUM_COMMANDLINE_DLL))
 $(eval $(call emit-deploy-wrapper,CRISIS,crisis,x))
 
 
@@ -106,6 +120,8 @@ install-local: $(ASSEMBLY) $(ASSEMBLY_MDB)
 	$(call cp,$(ASSEMBLY),$(DESTDIR)$(libdir)/$(PACKAGE))
 	$(call cp,$(ASSEMBLY_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
 	$(call cp,$(CRISIS_EXE_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call cp,$(C5_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call cp,$(PLOSSUM_COMMANDLINE_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
 	mkdir -p '$(DESTDIR)$(bindir)'
 	$(call cp,$(CRISIS),$(DESTDIR)$(bindir))
 	make post-install-local-hook prefix=$(prefix)
@@ -116,6 +132,8 @@ uninstall-local: $(ASSEMBLY) $(ASSEMBLY_MDB)
 	$(call rm,$(ASSEMBLY),$(DESTDIR)$(libdir)/$(PACKAGE))
 	$(call rm,$(ASSEMBLY_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
 	$(call rm,$(CRISIS_EXE_MDB),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call rm,$(C5_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
+	$(call rm,$(PLOSSUM_COMMANDLINE_DLL),$(DESTDIR)$(libdir)/$(PACKAGE))
 	$(call rm,$(CRISIS),$(DESTDIR)$(bindir))
 	make post-uninstall-local-hook prefix=$(prefix)
 
