--- a/src/crisis.csproj
+++ b/src/crisis.csproj
@@ -109,7 +109,7 @@ The output from crisis can be sent to the screen, file, or to another program. <
     <Compile Include="Combinatorics\Combinations.cs" />
     <Compile Include="Combinatorics\GenerateOption.cs" />
     <Compile Include="Combinatorics\IMetaCollection.cs" />
-    <Compile Include="Combinatorics\LeetSpeak.cs" />
+    <Compile Include="Combinatorics\TransformTextFiles.cs" />
     <Compile Include="Combinatorics\Permutations.cs" />
     <Compile Include="Combinatorics\Randomizer.cs" />
     <Compile Include="Combinatorics\SmallPrimeUtility.cs">
@@ -118,6 +118,9 @@ The output from crisis can be sent to the screen, file, or to another program. <
     <Compile Include="Combinatorics\Variations.cs" />
     <Compile Include="CommonSrc\CRC32.cs" />
     <Compile Include="CommonSrc\Iso8859Dash1Encoding.cs" />
+    <Compile Include="Tools\Download.cs" />
+    <Compile Include="Tools\NetworkClient.cs" />
+    <Compile Include="Tools\NetworkServer.cs" />
     <Compile Include="Plossum\Alignment.cs" />
     <Compile Include="Plossum\ColumnInfo.cs" />
     <Compile Include="Plossum\CommandLine\AssignmentToken.cs" />
@@ -170,7 +173,7 @@ The output from crisis can be sent to the screen, file, or to another program. <
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Terminal\CommandFunctionPattern.cs" />
-    <Compile Include="Tools\Tools.cs" />
+    <Compile Include="Tools\Utility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Charset\Charset.cs" />
     <Compile Include="Terminal\CommandFunctionHelp.cs" />
